[metadata]
name = otcextensions
summary = Open Telekom Cloud specific extensions for the OpenStack Client CLI and OpenStack SDK
description_file =
    README.rst
author = Artem Goncharov
author_email = artem.goncharov@gmail.com
home_page = http://python-otcextensions.readthedocs.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    OpenStack, openstackclient, openstacksdk, Open Telekom Cloud, otc, T-Systems, Telekom

[files]
packages =
  otcextensions

[entry_points]
keystoneauth1.plugin =
  agency = otcextensions.common.agency_auth:AgencyLoader

openstack.cli.extension =
  obs = otcextensions.osclient.obs.client
  rds = otcextensions.osclient.rds.client
  auto_scaling = otcextensions.osclient.auto_scaling.client
  kms = otcextensions.osclient.kms.client
  cbr = otcextensions.osclient.cbr.client
  cce = otcextensions.osclient.cce.client
  ces = otcextensions.osclient.ces.client
  load_balancer = otcextensions.osclient.load_balancer.client
  volume_backup = otcextensions.osclient.volume_backup.client
  dms = otcextensions.osclient.dms.client
  dcs = otcextensions.osclient.dcs.client
  cts = otcextensions.osclient.cts.client
  css = otcextensions.osclient.css.client
  anti_ddos = otcextensions.osclient.anti_ddos.client
  dns = otcextensions.osclient.dns.client
  deh = otcextensions.osclient.deh.client
  mrs = otcextensions.osclient.mrs.client
  nat = otcextensions.osclient.nat.client
  vpc = otcextensions.osclient.vpc.client
  iam = otcextensions.osclient.identity.client
  smn = otcextensions.osclient.smn.client
  sdrs = otcextensions.osclient.sdrs.client
  dcaas = otcextensions.osclient.dcaas.client

openstack.cbr.v3 =
  cbr_backup_list = otcextensions.osclient.cbr.v3.backup:ListBackups
  cbr_backup_show = otcextensions.osclient.cbr.v3.backup:ShowBackup
  cbr_backup_delete = otcextensions.osclient.cbr.v3.backup:DeleteBackup
  cbr_backup_restore = otcextensions.osclient.cbr.v3.backup:RestoreBackup
  cbr_checkpoint_create = otcextensions.osclient.cbr.v3.checkpoint:CreateCheckpoint
  cbr_checkpoint_show = otcextensions.osclient.cbr.v3.checkpoint:ShowCheckpoint
  cbr_policy_list = otcextensions.osclient.cbr.v3.policy:ListPolicies
  cbr_policy_show = otcextensions.osclient.cbr.v3.policy:ShowPolicy
  cbr_policy_create = otcextensions.osclient.cbr.v3.policy:CreatePolicy
  cbr_policy_update = otcextensions.osclient.cbr.v3.policy:UpdatePolicy
  cbr_policy_delete = otcextensions.osclient.cbr.v3.policy:DeletePolicy
  cbr_task_list = otcextensions.osclient.cbr.v3.task:ListTasks
  cbr_task_show = otcextensions.osclient.cbr.v3.task:ShowTask
  cbr_vault_list = otcextensions.osclient.cbr.v3.vault:ListVaults
  cbr_vault_show = otcextensions.osclient.cbr.v3.vault:ShowVault
  cbr_vault_create = otcextensions.osclient.cbr.v3.vault:CreateVault
  cbr_vault_update = otcextensions.osclient.cbr.v3.vault:UpdateVault
  cbr_vault_delete = otcextensions.osclient.cbr.v3.vault:DeleteVault
  cbr_vault_associate = otcextensions.osclient.cbr.v3.vault:AssociateVaultResource
  cbr_vault_dissociate = otcextensions.osclient.cbr.v3.vault:DissociateVaultResource
  cbr_vault_bind = otcextensions.osclient.cbr.v3.vault:BindVaultPolicy
  cbr_vault_unbind = otcextensions.osclient.cbr.v3.vault:UnbindVaultPolicy

#openstack.obs.v1 =
#  s3_ls = otcextensions.osclient.obs.v1.ls:List
#  s3_cp = otcextensions.osclient.obs.v1.cp:Copy


openstack.smn.v2 =
    smn_topic_list = otcextensions.osclient.smn.v2.topic:ListTopic
    smn_topic_show = otcextensions.osclient.smn.v2.topic:ShowTopic
    smn_topic_create = otcextensions.osclient.smn.v2.topic:CreateTopic
    smn_topic_update = otcextensions.osclient.smn.v2.topic:UpdateTopic
    smn_topic_delete = otcextensions.osclient.smn.v2.topic:DeleteTopic
    smn_subscription_list = otcextensions.osclient.smn.v2.subscription:ListSubscription
    smn_subscription_create = otcextensions.osclient.smn.v2.subscription:CreateSubscription
    smn_subscription_delete = otcextensions.osclient.smn.v2.subscription:DeleteSubscription
    smn_template_list = otcextensions.osclient.smn.v2.template:ListTemplate
    smn_template_show = otcextensions.osclient.smn.v2.template:ShowTemplate
    smn_template_create = otcextensions.osclient.smn.v2.template:CreateTemplate
    smn_template_update = otcextensions.osclient.smn.v2.template:UpdateTemplate
    smn_template_delete = otcextensions.osclient.smn.v2.template:DeleteTemplate
    smn_sms_send = otcextensions.osclient.smn.v2.sms:SendSms
    smn_message_publish = otcextensions.osclient.smn.v2.message:PublishMessage


openstack.obs.v1 =
    obs_container_create = otcextensions.osclient.obs.v1.container:CreateContainer
    obs_container_delete = otcextensions.osclient.obs.v1.container:DeleteContainer
    obs_container_list = otcextensions.osclient.obs.v1.container:ListContainer
#    container_save = otcextensions.osclient.obs.v1.container:SaveContainer
#    container_set = otcextensions.osclient.obs.v1.container:SetContainer
    obs_container_show = otcextensions.osclient.obs.v1.container:ShowContainer
#    container_unset = otcextensions.osclient.obs.v1.container:UnsetContainer
    obs_object_create = otcextensions.osclient.obs.v1.object:CreateObject
    obs_object_delete = otcextensions.osclient.obs.v1.object:DeleteObject
    obs_object_list = otcextensions.osclient.obs.v1.object:ListObject
    obs_object_save = otcextensions.osclient.obs.v1.object:SaveObject
#    obs_object_set = otcextensions.osclient.obs.v1.object:SetObject
    obs_object_show = otcextensions.osclient.obs.v1.object:ShowObject
#    obs_object_unset = otcextensions.osclient.obs.v1.object:UnsetObject


openstack.rds.v1 =
  rds_flavor_list = otcextensions.osclient.rds.v1.flavor:ListDatabaseFlavors
  rds_flavor_show = otcextensions.osclient.rds.v1.flavor:ShowDatabaseFlavor
  rds_datastore_list = otcextensions.osclient.rds.v1.datastore:ListDatastores
  rds_datastore_show = otcextensions.osclient.rds.v1.datastore:ShowDatastore
  rds_datastore_version_list = otcextensions.osclient.rds.v1.datastore:ListDatastoreVersions
  rds_datastore_version_show = otcextensions.osclient.rds.v1.datastore:ShowDatastoreVersion
  rds_instance_list = otcextensions.osclient.rds.v1.instance:ListDatabaseInstances
  rds_instance_show = otcextensions.osclient.rds.v1.instance:ShowDatabaseInstance
  rds_instance_create = otcextensions.osclient.rds.v1.instance:CreateDatabaseInstance
  rds_instance_delete = otcextensions.osclient.rds.v1.instance:DeleteDatabaseInstance
  rds_instance_restart = otcextensions.osclient.rds.v1.instance:RestartDatabaseInstance
  rds_instance_restore = otcextensions.osclient.rds.v1.instance:RestoreDatabaseInstance
  rds_backup_create = otcextensions.osclient.rds.v1.backup:CreateBackup
  rds_backup_delete = otcextensions.osclient.rds.v1.backup:DeleteBackup

openstack.rds.v3 =
  rds_flavor_list = otcextensions.osclient.rds.v3.flavor:ListDatabaseFlavors
  rds_datastore_type_list = otcextensions.osclient.rds.v3.datastore:ListDatastoreTypes
  rds_datastore_version_list = otcextensions.osclient.rds.v3.datastore:ListDatastoreVersions
  rds_configuration_list = otcextensions.osclient.rds.v3.configuration:ListConfigurations
  rds_configuration_show = otcextensions.osclient.rds.v3.configuration:ShowConfiguration
  rds_configuration_set = otcextensions.osclient.rds.v3.configuration:SetConfiguration
  rds_configuration_create = otcextensions.osclient.rds.v3.configuration:CreateConfiguration
  rds_configuration_apply = otcextensions.osclient.rds.v3.configuration:ApplyConfiguration
  rds_configuration_delete = otcextensions.osclient.rds.v3.configuration:DeleteConfiguration
  rds_configuration_parameter_list = otcextensions.osclient.rds.v3.configuration:ListConfigurationParameters
  rds_instance_list = otcextensions.osclient.rds.v3.instance:ListDatabaseInstances
  rds_instance_show = otcextensions.osclient.rds.v3.instance:ShowDatabaseInstance
  rds_instance_restore_time_show = otcextensions.osclient.rds.v3.instance:ShowAvailableRestoreTime
  rds_instance_create = otcextensions.osclient.rds.v3.instance:CreateDatabaseInstance
  rds_instance_restore = otcextensions.osclient.rds.v3.instance:RestoreDatabaseInstance
  rds_instance_delete = otcextensions.osclient.rds.v3.instance:DeleteDatabaseInstance
  rds_instance_backup_policy_show = otcextensions.osclient.rds.v3.instance:ShowBackupPolicy
  rds_instance_backup_policy_set = otcextensions.osclient.rds.v3.instance:SetBackupPolicy
  rds_backup_list = otcextensions.osclient.rds.v3.backup:ListBackup
  rds_backup_create = otcextensions.osclient.rds.v3.backup:CreateBackup
  rds_backup_delete = otcextensions.osclient.rds.v3.backup:DeleteBackup
  rds_backup_download_links = otcextensions.osclient.rds.v3.backup:ListBackupDownloadLinks

openstack.nat.v2 =
  nat_gateway_list = otcextensions.osclient.nat.v2.gateway:ListNatGateways
  nat_gateway_show = otcextensions.osclient.nat.v2.gateway:ShowNatGateway
  nat_gateway_create = otcextensions.osclient.nat.v2.gateway:CreateNatGateway
  nat_gateway_update = otcextensions.osclient.nat.v2.gateway:UpdateNatGateway
  nat_gateway_delete = otcextensions.osclient.nat.v2.gateway:DeleteNatGateway
  nat_snat_rule_list = otcextensions.osclient.nat.v2.snat:ListSnatRules
  nat_snat_rule_show = otcextensions.osclient.nat.v2.snat:ShowSnatRule
  nat_snat_rule_create = otcextensions.osclient.nat.v2.snat:CreateSnatRule
  nat_snat_rule_delete = otcextensions.osclient.nat.v2.snat:DeleteSnatRule
  nat_dnat_rule_list = otcextensions.osclient.nat.v2.dnat:ListDnatRules
  nat_dnat_rule_show = otcextensions.osclient.nat.v2.dnat:ShowDnatRule
  nat_dnat_rule_create = otcextensions.osclient.nat.v2.dnat:CreateDnatRule
  nat_dnat_rule_delete = otcextensions.osclient.nat.v2.dnat:DeleteDnatRule

openstack.auto_scaling.v1 =
  as_group_list = otcextensions.osclient.auto_scaling.v1.group:ListAutoScalingGroup
  as_group_show = otcextensions.osclient.auto_scaling.v1.group:ShowAutoScalingGroup
  as_group_create = otcextensions.osclient.auto_scaling.v1.group:CreateAutoScalingGroup
  as_group_delete = otcextensions.osclient.auto_scaling.v1.group:DeleteAutoScalingGroup
  as_group_update = otcextensions.osclient.auto_scaling.v1.group:UpdateAutoScalingGroup
  as_group_disable = otcextensions.osclient.auto_scaling.v1.group:DisableAutoScalingGroup
  as_group_enable = otcextensions.osclient.auto_scaling.v1.group:EnableAutoScalingGroup
  as_config_list = otcextensions.osclient.auto_scaling.v1.config:ListAutoScalingConfig
  as_config_show = otcextensions.osclient.auto_scaling.v1.config:ShowAutoScalingConfig
  as_config_create = otcextensions.osclient.auto_scaling.v1.config:CreateAutoScalingConfig
  as_config_delete = otcextensions.osclient.auto_scaling.v1.config:DeleteAutoScalingConfig
  as_policy_list = otcextensions.osclient.auto_scaling.v1.policy:ListAutoScalingPolicy
  as_policy_show = otcextensions.osclient.auto_scaling.v1.policy:ShowAutoScalingPolicy
  as_policy_create = otcextensions.osclient.auto_scaling.v1.policy:CreateAutoScalingPolicy
  as_policy_update = otcextensions.osclient.auto_scaling.v1.policy:UpdateAutoScalingPolicy
  as_policy_execute = otcextensions.osclient.auto_scaling.v1.policy:ExecuteAutoScalingPolicy
  as_policy_enable = otcextensions.osclient.auto_scaling.v1.policy:EnableAutoScalingPolicy
  as_policy_disable = otcextensions.osclient.auto_scaling.v1.policy:DisableAutoScalingPolicy
  as_policy_delete = otcextensions.osclient.auto_scaling.v1.policy:DeleteAutoScalingPolicy
  as_instance_list = otcextensions.osclient.auto_scaling.v1.instance:ListAutoScalingInstance
  as_instance_remove = otcextensions.osclient.auto_scaling.v1.instance:RemoveAutoScalingInstance
  as_instance_batch = otcextensions.osclient.auto_scaling.v1.instance:BatchActionAutoScalingInstance
  as_quota_list = otcextensions.osclient.auto_scaling.v1.quota:ListAutoScalingQuota
  as_activity_list = otcextensions.osclient.auto_scaling.v1.activity:ListAutoScalingActivityLogs

openstack.dms.v1 =
  dms_queue_list = otcextensions.osclient.dms.v1.queue:ListDMSQueue
  dms_queue_show = otcextensions.osclient.dms.v1.queue:ShowDMSQueue
  dms_queue_delete = otcextensions.osclient.dms.v1.queue:DeleteDMSQueue
  dms_queue_create = otcextensions.osclient.dms.v1.queue:CreateDMSQueue
  dms_group_list = otcextensions.osclient.dms.v1.group:ListGroup
  dms_group_delete = otcextensions.osclient.dms.v1.group:DeleteGroup
  dms_group_create = otcextensions.osclient.dms.v1.group:CreateGroup
  dms_instance_list = otcextensions.osclient.dms.v1.instance:ListDMSInstance
  dms_instance_show = otcextensions.osclient.dms.v1.instance:ShowDMSInstance
  dms_instance_create = otcextensions.osclient.dms.v1.instance:CreateDMSInstance
  dms_instance_set = otcextensions.osclient.dms.v1.instance:UpdateDMSInstance
  dms_instance_restart = otcextensions.osclient.dms.v1.instance:RestartDMSInstance
  dms_instance_topic_list = otcextensions.osclient.dms.v1.topic:ListDMSInstanceTopic
  dms_instance_topic_create = otcextensions.osclient.dms.v1.topic:CreateDMSInstanceTopic
  dms_instance_topic_delete = otcextensions.osclient.dms.v1.topic:DeleteDMSInstanceTopic
  dms_az_list = otcextensions.osclient.dms.v1.az:ListAZ
  dms_maintenance_window_list = otcextensions.osclient.dms.v1.maintenance_window:ListMW
  dms_product_list = otcextensions.osclient.dms.v1.product:ListProduct

openstack.dcs.v1 =
  dcs_instance_list = otcextensions.osclient.dcs.v1.instance:ListInstance
  dcs_instance_show = otcextensions.osclient.dcs.v1.instance:ShowInstance
  dcs_instance_delete = otcextensions.osclient.dcs.v1.instance:DeleteInstance
  dcs_instance_create = otcextensions.osclient.dcs.v1.instance:CreateInstance
  dcs_instance_set = otcextensions.osclient.dcs.v1.instance:SetInstance
  dcs_instance_extend = otcextensions.osclient.dcs.v1.instance:ExtendInstance
  dcs_instance_stop = otcextensions.osclient.dcs.v1.instance:StopInstance
  dcs_instance_start = otcextensions.osclient.dcs.v1.instance:StartInstance
  dcs_instance_restart = otcextensions.osclient.dcs.v1.instance:RestartInstance
  dcs_instance_changepwd = otcextensions.osclient.dcs.v1.instance:ChangePasswordInstance
  dcs_instance_backup_list = otcextensions.osclient.dcs.v1.backup:ListBackup
  dcs_instance_backup_create = otcextensions.osclient.dcs.v1.backup:CreateBackup
  dcs_instance_backup_delete = otcextensions.osclient.dcs.v1.backup:DeleteBackup
  dcs_instance_backup_restore = otcextensions.osclient.dcs.v1.restore_record:RestoreBackup
  dcs_instance_restore_list = otcextensions.osclient.dcs.v1.restore_record:ListRestoreRecords
  dcs_instance_params_list = otcextensions.osclient.dcs.v1.config:ListInstanceParam
  dcs_instance_params_show = otcextensions.osclient.dcs.v1.config:ShowInstanceParam
  dcs_instance_params_update = otcextensions.osclient.dcs.v1.config:UpdateInstanceParam
  dcs_stat_list = otcextensions.osclient.dcs.v1.statistic:ListStatistic
  dcs_quota_list = otcextensions.osclient.dcs.v1.quota:ListDCSQuota

openstack.kms.v1 =
  kms_cmk_create = otcextensions.osclient.kms.v1.cmk:CreateCMK
  kms_cmk_list = otcextensions.osclient.kms.v1.cmk:ListCMK
  kms_cmk_show = otcextensions.osclient.kms.v1.cmk:ShowCMK
  kms_cmk_enable = otcextensions.osclient.kms.v1.cmk:EnableCMK
  kms_cmk_disable = otcextensions.osclient.kms.v1.cmk:DisableCMK
  kms_cmk_delete = otcextensions.osclient.kms.v1.cmk:DeleteCMK
  kms_cmk_cancel_delete = otcextensions.osclient.kms.v1.cmk:CancelDeleteCMK
  kms_quota_list = otcextensions.osclient.kms.v1.quota:ListKMSQuota

openstack.cce.v1 =
  cce_cluster_list = otcextensions.osclient.cce.v1.cluster:ListCCECluster
  cce_cluster_show = otcextensions.osclient.cce.v1.cluster:ShowCCECluster
  cce_cluster_create = otcextensions.osclient.cce.v1.cluster:CreateCCECluster
  cce_cluster_delete = otcextensions.osclient.cce.v1.cluster:DeleteCCECluster
  cce_cluster_node_list = otcextensions.osclient.cce.v1.cluster_node:ListCCEClusterNode
  cce_cluster_node_show = otcextensions.osclient.cce.v1.cluster_node:ShowCCEClusterNode
  cce_cluster_node_create = otcextensions.osclient.cce.v1.cluster_node:CreateCCEClusterNode
  cce_cluster_node_delete = otcextensions.osclient.cce.v1.cluster_node:DeleteCCEClusterNode

openstack.cce.v3 =
  cce_cluster_list = otcextensions.osclient.cce.v2.cluster:ListCCECluster
  cce_cluster_show = otcextensions.osclient.cce.v2.cluster:ShowCCECluster
  cce_cluster_create = otcextensions.osclient.cce.v2.cluster:CreateCCECluster
  cce_cluster_delete = otcextensions.osclient.cce.v2.cluster:DeleteCCECluster
  cce_cluster_node_list = otcextensions.osclient.cce.v2.cluster_node:ListCCEClusterNode
  cce_cluster_node_show = otcextensions.osclient.cce.v2.cluster_node:ShowCCEClusterNode
  cce_cluster_node_create = otcextensions.osclient.cce.v2.cluster_node:CreateCCEClusterNode
  cce_cluster_node_delete = otcextensions.osclient.cce.v2.cluster_node:DeleteCCEClusterNode
  cce_cluster_certificate_show = otcextensions.osclient.cce.v2.cluster_certificate:ShowCCEClusterCertificates
  cce_node_pool_list = otcextensions.osclient.cce.v2.node_pool:ListCCENodePools
  cce_node_pool_show = otcextensions.osclient.cce.v2.node_pool:ShowCCENodePool
  cce_node_pool_create = otcextensions.osclient.cce.v2.node_pool:CreateCCENodePool
  cce_node_pool_delete = otcextensions.osclient.cce.v2.node_pool:DeleteCCENodePool

openstack.ces.v1 =
  ces_alarm_list = otcextensions.osclient.ces.v1.alarm:ListAlarms
  ces_alarm_show = otcextensions.osclient.ces.v1.alarm:ShowAlarm
  ces_alarm_create = otcextensions.osclient.ces.v1.alarm:CreateAlarm
  ces_alarm_switch_state = otcextensions.osclient.ces.v1.alarm:SetAlarm
  ces_alarm_delete = otcextensions.osclient.ces.v1.alarm:DeleteAlarm
  ces_metric_list = otcextensions.osclient.ces.v1.metric:ListMetrics
  ces_quota_list = otcextensions.osclient.ces.v1.quota:ListQuotas
  ces_event_data_list = otcextensions.osclient.ces.v1.event_data:ListEventData

openstack.load_balancer.v1 =
  loadbalancer_list = otcextensions.osclient.load_balancer.v1.load_balancer:ListLoadBalancer
  loadbalancer_show = otcextensions.osclient.load_balancer.v1.load_balancer:ShowLoadBalancer
  loadbalancer_create = otcextensions.osclient.load_balancer.v1.load_balancer:CreateLoadBalancer
  loadbalancer_set = otcextensions.osclient.load_balancer.v1.load_balancer:SetLoadBalancer
  loadbalancer_delete = otcextensions.osclient.load_balancer.v1.load_balancer:DeleteLoadBalancer
  loadbalancer_listener_list = otcextensions.osclient.load_balancer.v1.listener:ListListener
  loadbalancer_listener_show = otcextensions.osclient.load_balancer.v1.listener:ShowListener
  loadbalancer_listener_create = otcextensions.osclient.load_balancer.v1.listener:CreateListener
  loadbalancer_listener_set = otcextensions.osclient.load_balancer.v1.listener:SetListener
  loadbalancer_listener_delete = otcextensions.osclient.load_balancer.v1.listener:DeleteListener
  loadbalancer_pool_list = otcextensions.osclient.load_balancer.v1.pool:ListPool
  loadbalancer_pool_show = otcextensions.osclient.load_balancer.v1.pool:ShowPool
  loadbalancer_pool_create = otcextensions.osclient.load_balancer.v1.pool:CreatePool
  loadbalancer_pool_set = otcextensions.osclient.load_balancer.v1.pool:SetPool
  loadbalancer_pool_delete = otcextensions.osclient.load_balancer.v1.pool:DeletePool
  loadbalancer_member_list = otcextensions.osclient.load_balancer.v1.pool_member:ListPoolMember
  loadbalancer_member_show = otcextensions.osclient.load_balancer.v1.pool_member:ShowPoolMember
  loadbalancer_member_create = otcextensions.osclient.load_balancer.v1.pool_member:CreatePoolMember
  loadbalancer_member_set = otcextensions.osclient.load_balancer.v1.pool_member:SetPoolMember
  loadbalancer_member_delete = otcextensions.osclient.load_balancer.v1.pool_member:DeletePoolMember
  loadbalancer_healthmonitor_list = otcextensions.osclient.load_balancer.v1.health_monitor:ListHealthMonitor
  loadbalancer_healthmonitor_show = otcextensions.osclient.load_balancer.v1.health_monitor:ShowHealthMonitor
  loadbalancer_healthmonitor_create = otcextensions.osclient.load_balancer.v1.health_monitor:CreateHealthMonitor
  loadbalancer_healthmonitor_set = otcextensions.osclient.load_balancer.v1.health_monitor:SetHealthMonitor
  loadbalancer_healthmonitor_delete = otcextensions.osclient.load_balancer.v1.health_monitor:DeleteHealthMonitor

openstack.volume_backup.v2 =
  vbs_policy_list = otcextensions.osclient.volume_backup.v2.policy:ListVolumeBackupPolicy
  vbs_policy_show = otcextensions.osclient.volume_backup.v2.policy:ShowVolumeBackupPolicy
  vbs_policy_create = otcextensions.osclient.volume_backup.v2.policy:CreateVolumeBackupPolicy
  vbs_policy_update = otcextensions.osclient.volume_backup.v2.policy:UpdateVolumeBackupPolicy
  vbs_policy_delete = otcextensions.osclient.volume_backup.v2.policy:DeleteVolumeBackupPolicy
  vbs_policy_execute = otcextensions.osclient.volume_backup.v2.policy:ExecuteVolumeBackupPolicy
  vbs_policy_link = otcextensions.osclient.volume_backup.v2.policy:LinkResourceToVolumeBackupPolicy
  vbs_policy_unlink = otcextensions.osclient.volume_backup.v2.policy:UnlinkResourceFromVolumeBackupPolicy

openstack.cts.v1 =
  cts_trace_list = otcextensions.osclient.cts.v1.trace:ListTrace
  cts_tracker_show = otcextensions.osclient.cts.v1.tracker:ShowTracker
  cts_tracker_create = otcextensions.osclient.cts.v1.tracker:CreateTracker
  cts_tracker_set = otcextensions.osclient.cts.v1.tracker:SetTracker
  cts_tracker_delete = otcextensions.osclient.cts.v1.tracker:DeleteTracker

openstack.anti_ddos.v1 =
  antiddos_config_list = otcextensions.osclient.anti_ddos.v1.config:ListConfig
  antiddos_floatip_list = otcextensions.osclient.anti_ddos.v1.floating_ip:ListFloatingIP
  antiddos_floatip_show = otcextensions.osclient.anti_ddos.v1.floating_ip:ShowFloatingIP
  antiddos_floatip_events = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPEvents
  antiddos_floatip_stat_day = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPStatDay
  antiddos_floatip_stat_week = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPStatWeek

openstack.dns.v2 =
  dns_zone_list = otcextensions.osclient.dns.v2.zone:ListZone
  dns_zone_show = otcextensions.osclient.dns.v2.zone:ShowZone
  dns_zone_create = otcextensions.osclient.dns.v2.zone:CreateZone
  dns_zone_set = otcextensions.osclient.dns.v2.zone:SetZone
  dns_zone_delete = otcextensions.osclient.dns.v2.zone:DeleteZone
  dns_zone_router_add = otcextensions.osclient.dns.v2.zone:AssociateRouterToZone
  dns_zone_router_remove = otcextensions.osclient.dns.v2.zone:DisassociateRouterToZone
  dns_zone_nameserver_list = otcextensions.osclient.dns.v2.zone:ListNameserver
  dns_recordset_list = otcextensions.osclient.dns.v2.recordset:ListRS
  dns_recordset_show = otcextensions.osclient.dns.v2.recordset:ShowRS
  dns_recordset_create = otcextensions.osclient.dns.v2.recordset:CreateRS
  dns_recordset_set = otcextensions.osclient.dns.v2.recordset:SetRS
  dns_recordset_delete = otcextensions.osclient.dns.v2.recordset:DeleteRS
  dns_ptr_record_list = otcextensions.osclient.dns.v2.ptr:ListPTR
  dns_ptr_record_show = otcextensions.osclient.dns.v2.ptr:ShowPTR
  dns_ptr_record_set = otcextensions.osclient.dns.v2.ptr:SetPTR
  dns_ptr_record_unset = otcextensions.osclient.dns.v2.ptr:DeletePTR

openstack.deh.v1 =
  deh_host_list = otcextensions.osclient.deh.v1.host:ListHost
  deh_host_show = otcextensions.osclient.deh.v1.host:ShowHost
  deh_host_create = otcextensions.osclient.deh.v1.host:CreateHost
  deh_host_set = otcextensions.osclient.deh.v1.host:SetHost
  deh_host_unset = otcextensions.osclient.deh.v1.host:UnsetHost
  deh_host_delete = otcextensions.osclient.deh.v1.host:DeleteHost
  deh_host_type_list = otcextensions.osclient.deh.v1.host:ListHostType
  deh_server_list = otcextensions.osclient.deh.v1.host:ListServer

openstack.compute.v2 =
  server_set = otcextensions.osclient.compute.v2.server:SetServer
  server_unset = otcextensions.osclient.compute.v2.server:UnsetServer

openstack.css.v1 =
  css_cluster_list = otcextensions.osclient.css.v1.cluster:ListClusters
  css_cluster_show = otcextensions.osclient.css.v1.cluster:ShowCluster
  css_cluster_create = otcextensions.osclient.css.v1.cluster:CreateCluster
  css_cluster_delete = otcextensions.osclient.css.v1.cluster:DeleteCluster
  css_cluster_restart = otcextensions.osclient.css.v1.cluster:RestartCluster
  css_cluster_extend = otcextensions.osclient.css.v1.cluster:ExtendCluster
  css_flavor_list = otcextensions.osclient.css.v1.flavors:ListFlavors
  css_snapshot_create = otcextensions.osclient.css.v1.snapshot:CreateSnapshot
  css_snapshot_list = otcextensions.osclient.css.v1.snapshot:ListSnapshots
  css_snapshot_delete = otcextensions.osclient.css.v1.snapshot:DeleteSnapshot
  css_snapshot_restore = otcextensions.osclient.css.v1.snapshot:RestoreSnapshot
  css_snapshot_policy_set = otcextensions.osclient.css.v1.snapshot:SetSnapshotPolicy
  css_snapshot_policy_show = otcextensions.osclient.css.v1.snapshot:ShowSnapshotPolicy
  css_snapshot_function_disable = otcextensions.osclient.css.v1.snapshot:DisableSnapshotFunction
  css_snapshot_configuration_set = otcextensions.osclient.css.v1.snapshot:SetSnapshotConfiguration
  # CSS download certificate API is currently not registered on API gateway, Hope to be available soon (OTCBIGDAI-842).
  # css_certificate_download = otcextensions.osclient.css.v1.cert:DownloadCert

openstack.vpc.v2 =
  vpc_peering_list = otcextensions.osclient.vpc.v2.peering:ListVpcPeerings
  vpc_peering_show = otcextensions.osclient.vpc.v2.peering:ShowVpcPeering
  vpc_peering_create = otcextensions.osclient.vpc.v2.peering:CreateVpcPeering
  vpc_peering_update = otcextensions.osclient.vpc.v2.peering:UpdateVpcPeering
  vpc_peering_delete = otcextensions.osclient.vpc.v2.peering:DeleteVpcPeering
  vpc_peering_set = otcextensions.osclient.vpc.v2.peering:SetVpcPeering
  vpc_route_list = otcextensions.osclient.vpc.v2.route:ListVpcRoutes
  vpc_route_show = otcextensions.osclient.vpc.v2.route:ShowVpcRoute
  vpc_route_add = otcextensions.osclient.vpc.v2.route:AddVpcRoute
  vpc_route_delete = otcextensions.osclient.vpc.v2.route:DeleteVpcRoute

openstack.iam.v3 =
  iam_credential_list = otcextensions.osclient.identity.v3.credential:ListCredentials
  iam_credential_show = otcextensions.osclient.identity.v3.credential:ShowCredential
  iam_credential_create = otcextensions.osclient.identity.v3.credential:CreateCredential
  iam_credential_update = otcextensions.osclient.identity.v3.credential:UpdateCredential
  iam_credential_delete = otcextensions.osclient.identity.v3.credential:DeleteCredential

openstack.sdrs.v1 =
  sdrs_active_domain_list = otcextensions.osclient.sdrs.v1.active_domains:ListDomain
  sdrs_job_show = otcextensions.osclient.sdrs.v1.job:ShowJob

openstack.dcaas.v2 =
  dcaas_connection_list = otcextensions.osclient.dcaas.v2.connection:ListDirectConnections
  dcaas_connection_show = otcextensions.osclient.dcaas.v2.connection:ShowDirectConnection
  dcaas_connection_create = otcextensions.osclient.dcaas.v2.connection:CreateDirectConnection
  dcaas_connection_update = otcextensions.osclient.dcaas.v2.connection:UpdateDirectConnection
  dcaas_connection_delete = otcextensions.osclient.dcaas.v2.connection:DeleteDirectConnection

openstack.mrs.v1 =
  mrs_cluster_list = otcextensions.osclient.mrs.v1.cluster:ListCluster
  mrs_cluster_host_list = otcextensions.osclient.mrs.v1.cluster:ListClusterHost
  mrs_cluster_delete = otcextensions.osclient.mrs.v1.cluster:DeleteCluster
  dataprocessing_data_source_list = otcextensions.osclient.mrs.v1.datasource:ListDatasource
  dataprocessing_data_source_create = otcextensions.osclient.mrs.v1.datasource:CreateDatasource
  dataprocessing_data_source_delete = otcextensions.osclient.mrs.v1.datasource:DeleteDatasource
  dataprocessing_data_source_show = otcextensions.osclient.mrs.v1.datasource:ShowDatasource
  dataprocessing_data_source_update = otcextensions.osclient.mrs.v1.datasource:UpdateDatasource
  dataprocessing_job_binary_list = otcextensions.osclient.mrs.v1.jobbinary:ListJobbinary
  dataprocessing_job_binary_create = otcextensions.osclient.mrs.v1.jobbinary:CreateJobbinary
  dataprocessing_job_binary_delete = otcextensions.osclient.mrs.v1.jobbinary:DeleteJobbinary
  dataprocessing_job_binary_show = otcextensions.osclient.mrs.v1.jobbinary:ShowJobbinary
  dataprocessing_job_binary_update = otcextensions.osclient.mrs.v1.jobbinary:UpdateJobbinary
;  dataprocessing_job_submit = otcextensions.osclient.mrs.v1.job:SubmitJob
  dataprocessing_job_create = otcextensions.osclient.mrs.v1.job:CreateJob
  dataprocessing_job_list = otcextensions.osclient.mrs.v1.job:ListJob
;  dataprocessing_job_execute = otcextensions.osclient.mrs.v1.job:ExecuteJob
  dataprocessing_job_delete = otcextensions.osclient.mrs.v1.job:DeleteJob
  dataprocessing_job_show = otcextensions.osclient.mrs.v1.job:ShowJob
  dataprocessing_job_update = otcextensions.osclient.mrs.v1.job:UpdateJob
;  dataprocessing_job_exes_list = otcextensions.osclient.mrs.v1.job:ListJobexecution
;  dataprocessing_jobexec_list = otcextensions.osclient.mrs.v1.job:ListJobexec
;  dataprocessing_jobexec_show = otcextensions.osclient.mrs.v1.job:ShowJobexec
;  dataprocessing_jobexec_cancel = otcextensions.osclient.mrs.v1.job:CancelJobexec
;  dataprocessing_jobexec_delete = otcextensions.osclient.mrs.v1.job:DeleteJobexec

[build_sphinx]
builders = html,man
all_files = 1
warning_is_error = 0
source_dir = doc/source
build_dir = doc/build

[upload_sphinx]
upload_dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = otcextensions/locale/otcextensions.pot

[update_catalog]
domain = openstackclient
output_dir = otcextensions/locale
input_file = otcextensions/locale/otcextensions.pot

[compile_catalog]
directory = otcextensions/locale
domain = otcextensions
